feat: delete & update user by id
